# openai-agents

./: 03_Litellm_agent_sdk.ipynb  04_streaming_gemini.ipynb  OpenRouter_AI_Agents_SDK.ipynb  asyncio.ipynb  context_openai_agents_sdk.ipynb  custom_Runner.ipynb  dynamic_instructions.ipynb  dynamic_instructions_traces_practice.ipynb  failure_error_function.ipynb  guardrails.ipynb  parallelization.ipynb  routing.ipynb  run_lifecycle.ipynb  structured_output.ipynb
Agent,Run,Global/: Agent_level_setup.ipynb  Global_level_setup.ipynb  Run_level_steup.ipynb
advance_handoff/: main.py  main1.py  pyproject.toml
asynchronous/: pyproject.toml
asynchronous/src/asynchronous/: __init__.py  main.py
chatbot/: pyproject.toml
chatbot/src/chatbot/: main.py
handoff/: Readme.md  pyproject.toml
handoff/src/handoff/: __init__.py  main.py
memory_management/: main.py  pyproject.toml
multi_agents/: pyproject.toml
multi_agents/src/multi_agents/: __init__.py  main.py
openai_agents_sdk_with_fast_api/: main.py  pyproject.toml
streaming/: pyproject.toml
streaming/src/streaming/: __init__.py  main.py
synchronous/: pyproject.toml
synchronous/src/synchronous/: __init__.py  main.py
tools/: pyproject.toml
tools/src/tools/: __init__.py  main.py
