[project]
name = "multi-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-agents[litellm]>=0.0.17",
    "python-dotenv>=1.1.0",
]

[project.scripts]
multi-agents = "multi_agents:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
